--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,17 @@
   <link rel="stylesheet" href="css/main.css" />
   <!-- bootstrap css -->
 
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <!-- <link rel="stylesheet" href="css/bootstrap-icons/bootstrap-icons.css" /> -->
-  <link rel="stylesheet" href="assets/bootstrap-icons-1.11.3\font\bootstrap-icons.min.css" />
-  <link rel="stylesheet" href="css/boxicons/css/boxicons.min.css" />
-  <link rel="stylesheet" href="assets/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/glightbox/css/glightbox.min.css"/>
-  <link rel="stylesheet" href="assets/aos/aos.css"/>
+  <!-- <link rel="stylesheet" href="assets/bootstrap-icons-1.11.3\font\bootstrap-icons.min.css" /> -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+  <!-- <link rel="stylesheet" href="css/boxicons/css/boxicons.min.css" /> -->
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>  <!-- <link rel="stylesheet" href="css/boxicons/css/boxicons.min.css" /> -->
+  <!-- <link rel="stylesheet" href="assets/swiper/swiper-bundle.min.css" /> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.css" integrity="sha512-pmAAV1X4Nh5jA9m+jcvwJXFQvCBi3T17aZ1KWkqXr7g/O2YMvO8rfaa5ETWDuBvRq6fbDjlw4jHL44jNTScaKg==" crossorigin="anonymous" referrerpolicy="no-referrer" />  <link rel="stylesheet" href="assets/glightbox/css/glightbox.min.css"/>
+  <!-- <link rel="stylesheet" href="assets/aos/aos.css"/> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -1077,22 +1081,31 @@
 
   <!-- pure counter  -->
   <script src="assets/purecounter/purecounter.js"></script>
+  <!-- <script src=" https://cdn.jsdelivr.net/npm/@srexi/purecounterjs@1.5.0/dist/purecounter_vanilla.min.js "></script> -->
   <!-- bootstrap js files  -->
-  <script src="js/bootstrap.min.js"></script>
+  <!-- <script src="js/bootstrap.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  
   <!-- swiper js files  -->
-  <script src="assets/swiper/swiper-bundle.min.js"></script>
+  <!-- <script src="assets/swiper/swiper-bundle.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- pure counter  -->
-  <script src="assets/purecounter/purecounter.js"></script>
+  <!-- <script src="assets/purecounter/purecounter.js"></script> -->
   <!-- isotype filtering -->
-  <script src="assets/isotope-layout/isotope.pkgd.min.js"></script>
+  <!-- <script src="assets/isotope-layout/isotope.pkgd.min.js"></script> -->
+  <script src=" https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.pkgd.min.js "></script>
   <!-- glightbox -->
-  <script src="assets/glightbox/js/glightbox.min.js"></script>
+  <!-- <script src="assets/glightbox/js/glightbox.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js" integrity="sha512-RBWI5Qf647bcVhqbEnRoL4KuUT+Liz+oG5jtF+HP05Oa5088M9G0GxG0uoHR9cyq35VbjahcI+Hd1xwY8E1/Kg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Swal -->
-  <script src="js/sweetAlert.js"></script>
+  <!-- <script src="js/sweetAlert.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <!-- main js files  -->
   <script src="js/main.js"></script>
   <!-- aos files  -->
-  <script src="assets/aos/aos.js"></script>
+  <!-- <script src="assets/aos/aos.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <!-- Contact Form -->
   <script src="js/form.js"></script>
 <!-- Locaiton Select -->
