Added Available Locations To The Main Page

--- a/public/index.html
+++ b/public/index.html
@@ -102,20 +102,7 @@
         <div class="col-lg-6 col-12 order-2" data-aos="zoom-in" data-aos-delay="150">
           <h3>Welcome To OceanWater </h3>
           <p><i>We offer pure drinking water vending services to many residence. <br> We cover the following locations:</i></p>
-          <ul class="list-unstyled">
-            <li>
-              <i class="bi bi-check-circle"></i>
-              Garden City
-            </li>
-            <li>
-              <i class="bi bi-check-circle"></i>
-              Allsoaps
-            </li>
-            <li>
-              <i class="bi bi-check-circle"></i>
-              <span> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</span>
-            </li>
+          <ul class="list-unstyled" id="OurLocations">
           </ul>
           <a href="#products" class="read-more">Order Now</a>
         </div>
