Fixed Database Connection

--- a/public/admin.html
+++ b/public/admin.html
@@ -86,7 +86,7 @@
           
         </div>
         <div class="col-lg-5 col-12 order-1 order-lg-1 " data-aos="zoom-in" data-aos-delay="150">
-          <img class="img-fluid animated" src="images/hero-img.png" alt="animation img">
+          <img class="img-fluid animated" src="images/water-bottles/bottles4.png" alt="animation img">
         </div>
       </div>
 
