--- a/public/admin.html
+++ b/public/admin.html
@@ -6,33 +6,46 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="....." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ocean Waters </title>
+  <title>Culligan Water</title>
+  <link rel="shortcut icon" href="/images/Culligan Waters Logo.png" type="image/x-icon">
+  
+  <!-- ONLINE RESOURCES -->
   <!-- Google Fonts -->
-  <link
+  <!-- <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
-  <!-- main css stylesheet -->
-  <link rel="stylesheet" href="css/main.css" />
-  <!-- bootstrap css -->
-
-  <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
-  <!-- ? Bootstrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
-  <!-- <link rel="stylesheet" href="css/bootstrap-icons/bootstrap-icons.css" /> -->
-  <!-- <link rel="stylesheet" href="assets/bootstrap-icons-1.11.3\font\bootstrap-icons.min.css" /> -->
+    rel="stylesheet"> -->
+  
+  
+  <!-- ?Bootstrap -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" /> -->
   <!-- ?Bootstrap Icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-  <!-- <link rel="stylesheet" href="css/boxicons/css/boxicons.min.css" /> -->
-  <!-- ?Box Icons -->
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> 
-  <!-- <link rel="stylesheet" href="assets/swiper/swiper-bundle.min.css" /> -->
-  <!-- ?Swiper -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.css" integrity="sha512-pmAAV1X4Nh5jA9m+jcvwJXFQvCBi3T17aZ1KWkqXr7g/O2YMvO8rfaa5ETWDuBvRq6fbDjlw4jHL44jNTScaKg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- <link rel="stylesheet" href="assets/glightbox/css/glightbox.min.css"/> -->
-  <!-- <link rel="stylesheet" href="assets/aos/aos.css"/> -->
-  <!-- ?Aos -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" /> -->
 
+  <!-- ?BoxIcons -->
+
+  <!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>  -->
+  <!-- ? Swiper -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.css" integrity="sha512-pmAAV1X4Nh5jA9m+jcvwJXFQvCBi3T17aZ1KWkqXr7g/O2YMvO8rfaa5ETWDuBvRq6fbDjlw4jHL44jNTScaKg==" crossorigin="anonymous" referrerpolicy="no-referrer" />  -->
+  <!-- ? aos -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+
+  <!-- lOCAL RESOURCES -->
+   <!-- main css stylesheet -->
+   <link rel="stylesheet" href="css/main.css" />
+   <!-- bootstrap css -->
+   <link rel="stylesheet" href="css/bootstrap.min.css" />
+   <!-- bootstrap icons -->
+   <!-- <link rel="stylesheet" href="css/bootstrap-icons/bootstrap-icons.css" /> -->
+   <link rel="stylesheet" href="assets/bootstrap-icons-1.11.3\font\bootstrap-icons.min.css" />
+   <!-- BoxIcons -->
+   <link rel="stylesheet" href="css/boxicons/css/boxicons.min.css" />
+ <!-- Swiper -->
+   <link rel="stylesheet" href="assets/swiper/swiper-bundle.min.css" />
+   <!-- Glight -->
+     <link rel="stylesheet" href="assets/glightbox/css/glightbox.min.css"/>
+     <!-- aos -->
+   <link rel="stylesheet" href="assets/aos/aos.css"/>
+ 
 </head>
 
 <body>
@@ -41,7 +54,14 @@
     <!-- start navbar  -->
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <h1 class="logo"><a class="navbar-brand" href="#">OceanWaters</a></h1>
+        <h1 class="logo">
+          <img
+          src="/images/Culligan Waters Text Logo.png"
+          class="img-fluid rounded-top"
+          width="250"
+          alt=""
+        />
+      </h1>
         <button class="navbar-toggler "  type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -905,7 +925,7 @@
 
 
   <!-- ONLINE  RESOURCES -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
   <script src=" https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.pkgd.min.js "></script>
@@ -915,39 +935,29 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="assets/purecounter/purecounter.js"></script> -->
+
+
+
+  <!-- LOCAL SCRIPTS -->
+  <!-- pure counter  -->
   <script src="assets/purecounter/purecounter.js"></script>
-
-
-
-
-  <!-- pure counter  -->
-  <!-- <script src="assets/purecounter/purecounter.js"></script> -->
-  <!-- bootstrap js files  -->
-  <!-- <script src="js/bootstrap.min.js"></script> -->
-  <!-- <script src="js/bootstrap.min.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
-
+<!-- bootstrap script -->
+<script src="js/bootstrap.min.js"></script>
   <!-- swiper js files  -->
-  <!-- <script src="assets/swiper/swiper-bundle.min.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-
-  <!-- pure counter  -->
-  <!-- <script src="assets/purecounter/purecounter.js"></script> -->
+  <script src="assets/swiper/swiper-bundle.min.js"></script>
+    <!-- pure counter  -->
+  <script src="assets/purecounter/purecounter.js"></script>
   <!-- isotype filtering -->
   <script src="assets/isotope-layout/isotope.pkgd.min.js"></script>
-  <!-- <script src=" https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.pkgd.min.js "></script> -->
-
-  <!-- glightbox -->
-  <!-- <script src="assets/glightbox/js/glightbox.min.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.3.0/js/glightbox.min.js" integrity="sha512-RBWI5Qf647bcVhqbEnRoL4KuUT+Liz+oG5jtF+HP05Oa5088M9G0GxG0uoHR9cyq35VbjahcI+Hd1xwY8E1/Kg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-
-  <!-- Swal -->
-  <!-- <script src="js/sweetAlert.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
-
-  <!-- aos files  -->
-  <!-- <script src="assets/aos/aos.js"></script> -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+    <!-- glightbox -->
+  <script src="assets/glightbox/js/glightbox.min.js"></script>
+   <!-- Swal -->
+  <script src="js/sweetAlert.js"></script>
+   <!-- Qr Code -->
+   <script src="js/qrcodejs/qrcode.min.js"></script>
+    <!-- aos files  -->
+  <script src="assets/aos/aos.js"></script>
 
   <!-- Contact Form -->
   <script src="js/form.js"></script>
